# infra-agent

./: .env.example  .gitignore  CLAUDE.md  Genesis-Bookmarks.html  README.md  pyproject.toml  start-prompt
docs/: access-urls.md  architecture.md  bookmarks-infra-agent.html  dev-vs-prod-decisions.md  gitlab.md  lessons-learned.md  observability-platform-comparison.md  requirements.md  security.md  user-guide.md
docs/infra-agent/: README.md  architecture.md  knowledge-base.md  langgraph-workflow.md  lessons-learned.md  mcp-integration.md  requirements.md  system-prompts.md  tools-reference.md  user-guide.md
docs/planning/: phase-details.md
docs/security-observability/: README.md  access-guide.md  architecture.md  decisions.md  dev-vs-prod-decisions.md  oss-components.md
docs/security-observability/workflows/: deployment-pipeline.md  infrastructure-build.md
docs/workflows/: infrastructure-build.md  nist-compliance.md
evidence/phase1-foundation/: iam-roles-stack.txt
infra/cloudformation/cfn-guard-rules/nist-800-53/: phase1-controls.guard  tagging-rules.guard
infra/cloudformation/stacks/00-foundation/: bastion.yaml  iam-roles.yaml  security-groups.yaml  vpc.yaml
infra/cloudformation/stacks/01-networking/: alb-observability.yaml  cognito-auth.yaml
infra/cloudformation/stacks/02-data/: gitlab-storage.yaml  keycloak-rds.yaml
infra/cloudformation/stacks/02-eks/: eks-oidc-cognito.yaml
infra/cloudformation/stacks/03-eks/: access-config.yaml  addons.yaml  aws-lb-controller-irsa.yaml  cluster.yaml  eniconfigs.yaml  node-groups.yaml
infra/cloudformation/stacks/05-observability/: loki-storage.yaml  velero-storage.yaml
infra/helm/charts/eniconfigs/: Chart.yaml  values.yaml
infra/helm/values/: alb-nodeport-services.yaml  alb-target-group-bindings.yaml  rbac-cognito.yaml
infra/k8s/storage/: gp3-storageclass.yaml
scripts/: bastion-connect.sh  cleanup-orphaned-pods.sh  deploy-signoz-dashboards.sh  destroy-environment.sh  graceful-shutdown.sh  graceful-startup.sh  migrate-to-signoz.sh  services.sh  setup-keycloak-secret.sh  setup-kubeconfig.sh  shutdown-environment.sh  shutdown.sh  startup-environment.sh  startup.sh  test-apis.sh  tunnel.sh  verify-phase1-foundation.sh  verify-phase2-eks.sh
scripts/deprecated/: drift-check.sh  shutdown-environment.sh  startup-environment.sh
src/infra_agent/: __init__.py  config.py  main.py
src/infra_agent/agents/: __init__.py  base.py
src/infra_agent/core/: __init__.py  artifacts.py  contracts.py  graph.py  router.py  state.py
src/infra_agent/llm/: __init__.py  bedrock.py
src/infra_agent/mcp/: __init__.py  aws_server.py  client.py  git_server.py
(+71 files in other folders)
